--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav id= navbar>
             <div class="container">
-                <a href=index.html><img src="/img/mona_logo.svg"logo" class="logo"></a>
+                <a href=index.html><img src="./img/mona_logo.svg" class="logo" /></a>
                 <ul>
                     <li><a class=current href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
