--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="container">
                         <div class="career-flow">
                             <h1>My <span class="text-primary2">Career</span> User Flow</h1>
-                            <img src="/img/career_flowchart.jpg" alt="flow chart">
+                            <img src="./img/career_flowchart.jpg" alt="flow chart"/>
                         </div>
                     </div>
             </section>
