fixed image source

--- a/about.html
+++ b/about.html
@@ -41,27 +41,27 @@
             <h1 class="l-heading">How do my skills in Architectural Design Translate to UX?</h1>
             
             <div class="testimonial bg-primary">
-                <img src="/img/17th st_concept sketch.jpg" alt="concept plan sketch">
+                <img src="./img/17th st_concept sketch.jpg" alt="concept plan sketch"/>
                 <p>User Flow Diagrams ---- Bubble Diagrams</p>
                 <p>When initial starting a space-planning excersize in the built environment, we start with a basic outline of the space and start placing "bubbles" for the different space allocations required. This forms a basic map or understanding of the space and how it will flow and naturally create circulation and adjacencies through the space. Often several iterations of this will be created before landing on a solution that will be implemented into further refinement. The same design-thought process is happening in user-flow diagramming.</p>
             </div>
             <div class="testimonial bg-primary">
-                <img src="img/SLS Demo.jpg" alt="things">
+                <img src="./img/SLS Demo.jpg" alt="things"/>
                 <p>Research --- Existing Site Verification</p>
                 <p>When starting a Design project for an existing built environment, we cannot begin anything until we have done our initial research. Visiting the existing site would be the most important, then gathering all the drawings and data for the existing structure that's available, then digging deeper into the conditions that can be altered and what challenges we may encounter if we do alter any of the existing conditions.</p>
             </div>
             <div class="testimonial bg-primary">
-                <img src="img/Hub Market.jpg" alt="things">
+                <img src="./img/Hub Market.jpg" alt="things"/>
                 <p>Wire Framing --- Blocking Diagram</p>
                 <p>Like an initial Wire Frame of a web-based application, a blocking diagram or schematic architectural plan shows the client or user the basics of the features without all the detail and visuals built into the design. It is a very high-level way of communicating ideas to gain initial buy-in on the order & arrangements of the programmatic spaces in order to move forward.</p>
             </div>
             <div class="testimonial bg-primary">
-                <img src="img/THE YARD render.jpg" alt="things">
+                <img src="./img/THE YARD render.jpg" alt="things"/>
                 <p>Prototyping --- Visualization</p>
                 <p>Adding in more functionality and detailed design in order to develop a testable prototype is very similar to the techniques used in architectural design when creating visualization for the client. I have experience in presenting visualization of spaces to the client through renderings of varying fidelity levels, 3-d mock-ups either physical or digital or through full virtual reality walkthroughs with the clients in control</p>
             </div>
             <div class="testimonial bg-primary">
-                <img src="img/IMG_0286.JPG" alt="things">
+                <img src="./img/IMG_0286.JPG" alt="things"/>
                 <p>User Testing --- Community Input Sessions</p>
                 <p>All Architectural projects start with client feedback and input of course, but often on community projects such as schools and public libraries the public needs to be engaged in the process. These start with initial ideas, input and thoughts about their desires for their future community building. And then later we will showcase further development for community approval and feedback in order to get complete public buy-in on the project often due to public funding. This is much like user testing, where we want un-biased and un-prompted feedback on what the end-user really wants not what we assume they want.</p>
             </div>
