--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <nav id= navbar>
             <div class="container">
-                <a href=index.html><img src="/img/mona_logo.svg" alt="logo" class="logo"></a>
+                <a href=index.html><img src="./img/mona_logo.svg" alt="logo" class="logo"/></a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
