--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <nav id= navbar>
             <div class="container">
-                <a href=index.html><img src="/img/mona_logo.svg" alt="logo" class="logo"></a>
+                <a href=index.html><img src="./img/mona_logo.svg" alt="logo" class="logo"/></a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a class=current href="about.html">About</a></li>
