updated contact page and style
updated contact page and style

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 From <span class="text-primary">Way-finding </span>to <span class="text-primary">wire-framing</span>.</p>
                 
-                Over my 17 years as an architectural and interior designer, I have gained the knowledge and experience of user-centric design thought ideation. I have mastered expertise in approaching each project and design problem with the end-user in mind, through direct interviews, community input, and research. All of the built environments I have designed and worked through into completion have given me the insight and experience to understand how to implement my client's needs in the most thoughtful, cost-effective ways through interdisiplinary design and creative problem-solving skills.
+                Over my 17 years as an architectural and interior designer, I have gained the knowledge and experience of user-centric design thought ideation. I have expertise in approaching each project and design problem with the end-user in mind, through direct interviews, community input, and research. All of the built environments I have designed and worked through into completion have given me the insight and experience to understand how to implement my client's needs in the most thoughtful, cost-effective ways through interdisiplinary design and creative problem-solving skills.
                 <br>
                 <br>
                 <a href="about.html" class="btn btn-light">Read More</a>
