--- a/contact.html
+++ b/contact.html
@@ -23,31 +23,17 @@
             </div>
         </nav>
     </header>
-    <section id="contact-form" class="py-3">
-        <div class="container">
+    <div id="showcase2">
+      <div class="container">
+        <div class= "showcase-content">
           <h1 class="l-heading"><span class="text-primary">Contact</span> Me</h1>
-          <p>Feel free to reach out to me here</p>
-          <form action="process.php">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" name="name" id="name">
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea name="message" id="message"></textarea>
-            </div>
-            <button type="submit" class="btn">Submit</button>
-            <br>
-            <a href="https://drive.google.com/file/d/1ymrJc5kXUmcsWk7S1z8KiaTvEIiVC62K/view?usp=sharing" class="btn btn-light" target="_blank">Download My Resume</a>
-            <br>
-          </form>
+          <h1 class="l-heading">I am currently available for a full-time position as a UX Designer, and can be reached at the email or phone number below.</h1>
+          <a class="btn" href="https://drive.google.com/file/d/16jyErBPP8za6xZxBCGmcKuIEii-wvQvD/view?usp=sharing" target="_blank"> Download Resume </a> 
+          <a class="btn" href="https://drive.google.com/file/d/16jyErBPP8za6xZxBCGmcKuIEii-wvQvD/view?usp=sharing" target="_blank"> View Portfolio Website </a>   
+    </div>
+      </div>
         </div>
-      </section>
-      <br>
+   
     <section class="contact-icons">
         <div class="box bg-dark">
             <i class="fas fa-hotel fa-4x"></i>
